<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">McDistance</string>
    <string name="mcdistance">McDistance:</string>
    <string name="mcdistanceAddress">Address:</string>
    <string name="mcdistanceMiles">Miles:</string>
    <string name="mcdistanceFeet">Feet:</string>
    <string name="mcdistanceMeters">Meters:</string>
    <string name="mcdistanceKilos">Kilometers:</string>
    <string name="view_mcdistance">View McDistance</string>
    <string name="calculate_distance">Calculate Distance</string>
    <string name="directions">Get Directions</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="action_settings">Settings</string>

</resources>
