<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/latitudeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/latitude"
            android:gravity="center" />

        <TextView
            android:id="@+id/longitudeTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/longitude"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/mcdistanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/mcdistance" />

        <TextView
            android:id="@+id/metersTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/mcdistanceMeters" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/mcdistanceAddress" />

        </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <Button
            android:id="@+id/view_mcdistance_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_mcdistance" />

        <Button
            android:id="@+id/calculate_distance_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate_distance" />

        <Button
            android:id="@+id/directions_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/startButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/stop" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>